correction de la couleur pour le contraste et la lisibilite

--- a/styles/index.css
+++ b/styles/index.css
@@ -136,7 +136,7 @@ iframe {
 .developpement div h4 {
     font-size: 2rem;
     text-align: left;
-    color: #385e45;
+    color: #4e7b5c;
     font-weight: bold;
     text-decoration: underline;
     margin-bottom: 2%;
